--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developed By Vinita</title>
+    <title>Developed By Vinita Tandulkar</title>
   </head>
   <body class="dark:bg-zinc-900 bg-amber-100 h-screen">
     <div id="root"></div>
